Intermediary commit. (Does not work correctly.)

--- a/Keyboard/Info.plist
+++ b/Keyboard/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Keyboard</string>
+	<string>Catboard</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
@@ -38,7 +38,7 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.keyboard-service</string>
 		<key>NSExtensionPrincipalClass</key>
-		<string>${PRODUCT_MODULE_NAME}.KeyboardViewController</string>
+		<string>${PRODUCT_MODULE_NAME}.Catboard</string>
 	</dict>
 </dict>
 </plist>
